--- a/templates/signup_form.html
+++ b/templates/signup_form.html
@@ -1,24 +1,18 @@
 {% extends "base_template.html" %}
-{% block title %}
-    {% if form.title.data %}
-        {{ form.title.data }}
-    {% else %}
-        Nueva entrada
-    {% endif %}
-{% endblock %}
+{% block title %}Registro de usuarios{% endblock %}
 {% block content %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <div>
             {{ form.name.label }}
-            {{ form.name(size=128) }}<br>
+            {{ form.name(size=64) }}<br>
             {% for error in form.name.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
         </div>
         <div>
             {{ form.lastname.label }}
-            {{ form.lastname(size=128) }}<br>
+            {{ form.lastname(size=64) }}<br>
             {% for error in form.lastname.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
@@ -27,6 +21,13 @@
             {{ form.email.label }}
             {{ form.email }}<br>
             {% for error in form.email.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.password.label }}
+            {{ form.password }}<br>
+            {% for error in form.password.errors %}
             <span style="color: red;">{{ error }}</span>
             {% endfor %}
         </div>
